# occQt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  occQt.cpp  occQt.h  occQt.ui  occView.cpp  occView.h  occqt.qrc
